<resources>
    <string name="app_name">FatBooks</string>
    <string name="read">Đọc và nghe 20.000 nội dung
        ngay hôm nay!!</string>
    <string name="menu_home">Home</string>
    <string name="main_actions">Endow</string>
    <string name="main_cc">Community</string>
    <string name="main_tv">Library</string>
    <string name="main_cb">User</string>
    <string name="text_hello">Welcome to FatBooks</string>
    <string name="open">Open</string>
    <string name="text_home">You need to log in before using this feature to ensure account data synchronization across multiple devices</string>
    <string name="yes">AGREE</string>
    <string name="no">CANCEL</string>
    //
    <string name="username_hint">Username</string>
    <string name="password_hint">password</string>
    <string name="login_button">login</string>
    <string name="register_button">Register</string>
    ///
    <string name="en_book">See more retail books</string>
    <string name="en_books">See more stories</string>

</resources>