<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragment.CommunityFragment">
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/baseline_close_24" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/text_hello"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/arbutus"
        android:text="@string/app_name"
        android:textColor="@color/md_green_500"
        android:textSize="48sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/open"
        android:textColor="@color/md_black_1000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="329dp"
        android:layout_height="121dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:fontFamily="@font/amaranth_bold"
        android:textAlignment="center"
        android:text="@string/text_home"
        android:textColor="@color/md_black_1000"
        android:textSize="20sp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/yes"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/yes"
        android:background="@drawable/btn_login"
        android:textColor="@color/white"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/yes"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/no"
        android:background="@drawable/btn_cancel"
        android:textColor="@color/md_green_400"/>

</RelativeLayout>
