<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/md_green_400">


    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Đăng nhập"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_clear_24" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="match_parent"
        android:layout_height="656dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.985"
        app:srcCompat="@drawable/image_run" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="634dp"
        android:orientation="vertical"
        android:paddingLeft="26dp"
        android:paddingRight="26dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        tools:ignore="MissingConstraints">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/main_cc"
            android:src="@drawable/app_icon" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/edit_text"
            android:hint="@string/username_hint"
            android:textColorHint="@color/md_grey_500" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edit_text"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textColorHint="@color/md_grey_500" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_login"
            android:text="@string/login_button"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="250dp">

            <TextView
                android:id="@+id/v1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="198dp"
                android:backgroundTint="@color/white"
                android:text="Đăng ký ngay"
                android:textColor="@color/md_green_400"
                android:textSize="14dp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/v2"
                android:layout_width="112dp"
                android:layout_height="33dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="19dp"
                android:layout_marginBottom="198dp"
                android:backgroundTint="@color/white"
                android:text="Quên mật khẩu?"
                android:textColor="@color/md_green_400"
                android:textSize="14dp"
                tools:ignore="TextSizeCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:text="Hoặc"
                android:textColor="@color/md_grey_500"
                android:textSize="16dp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="100dp"
                android:layout_marginBottom="107dp"
                app:srcCompat="@drawable/fb" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="37dp"
                android:layout_marginBottom="106dp"
                android:layout_toEndOf="@+id/imageView4"
                app:srcCompat="@drawable/gg" />


        </RelativeLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
